--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="section">
             <div class="slds-form-element">
                 <label class="slds-form-element__label" for="phone">
-                    휴대폰
+                    휴대폰2
                     <span class="required">* </span>
                 </label>
             <div class="description">11자리를 정확히 입력해 주세요. ex) 010-1234-5678</div>
