--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>문의사항</title>
+    <title>26년 오사카소다 세미나(3/28) 신청서</title>
 </head>
 <style>
+    body {
+        background:#e1eddf;
+        padding : 1rem;
+    }
+
+    input {
+        border: 1px solid #76716b;
+        height: 1.5rem;
+        width: 100%;
+        border-radius: 5px;
+        margin-top: 3px;
+    }
     .section {
         font-size: 16px !important;
         margin: 1rem 0;
