--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>26년 오사카소다 세미나(3/28) 신청서</title>
+    <title>문의사항</title>
 </head>
 <style>
     body {
@@ -50,6 +50,13 @@
         box-shadow: 0 2px 16px rgba(0, 0, 0, 0.08);
         font-family: 'Segoe UI', 'Apple SD Gothic Neo', Arial, sans-serif;
     }
+    button {
+        background: #232564;
+        color: #fff;
+        border: none;
+        padding: 0.5rem;
+        border-radius: 6px;
+    }
 </style>
 <script>
     CKEDITOR.timestamp = '4.24.0.4';
@@ -89,7 +96,7 @@
         <input type="hidden" name="Campaign_ID" value="701Hu000002QRviIAG" />
         <input type="hidden" name="member_status" value="Responded" />
         <input type=hidden name="oid" value="00DHu00000xnhih">
-        <input type=hidden name="retURL" value="https://storm-931b5e886f7e4a.my.site.com/campaign/submit">
+        <input type=hidden name="retURL" value="https://www.peakmansp.co.kr/">
         <input type=hidden name="lead_source" id="lead_source" value="세미나">
         <div style="padding: 1rem;border-radius: 12px;background-color:#fff;" class="main-description">
             <div class="title">26년 오사카소다 세미나(3/28) 신청서</div>
