--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>문의사항</title>
+    <title>26년 오사카소다 세미나</title>
 </head>
 <style>
     body {
@@ -14,7 +14,7 @@
     input {
         border: 1px solid #76716b;
         height: 1.5rem;
-        width: 100%;
+        width: 99%;
         border-radius: 5px;
         margin-top: 3px;
     }
