--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>26년 오사카소다 세미나</title>
+    <title>26년 오사카소다 세미나 (03/28) </title>
 </head>
 <style>
     body {
