--- a/index.html
+++ b/index.html
@@ -96,10 +96,9 @@
         <input type="hidden" name="Campaign_ID" value="701Hu000002QS1XIAW" />
         <input type="hidden" name="member_status" value="Responded" />
         <input type=hidden name="oid" value="00DHu00000xnhih">
-        <input type=hidden name="retURL" value="https://www.peakmansp.co.kr/">
         <input type=hidden name="lead_source" id="lead_source" value="세미나">
         <div style="padding: 1rem;border-radius: 12px;background-color:#fff;" class="main-description">
-            <div class="title">26년 오사카소다 세미나(3/28) 신청서</div>
+            <div class="title">26년 오사카소다 세미나(3/28) 신청서:3</div>
             <br>
             <div>
                 <p>2024년 하반기 피크만에스피에서 일본의 컬럼 메이커사인 오사카소다가 주관하는 세미나를 주최합니다.</p>
